--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="images/farm.jpg"</h1>
+        <h1>ADAMAZI FEEDS AND FARMERS SOLUTION</h1>
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About Us</a>
